# demo

./: .gitignore  .gitmodules  README.md
Adobe PR/: README.md
acgist-common/: README.md  pom.xml
acgist-conan/: .gitignore  README.md  pom.xml
acgist-drools/: .gitignore  README.md  pom.xml
acgist-feel/: README.md  pom.xml
acgist-flink/: pom.xml
acgist-hadoop/: pom.xml
acgist-share/: WeixinController.java
acgist-spark/: pom.xml
acgist-utils/: .gitignore  LICENSE  README.md  pom.xml
activiti/: README.md  activiti.bpmn20.xml  pom.xml
ai/: .gitignore  AI.md  CMakeLists.txt  Dataset.hpp  TestClassify.cpp  TestGender.cpp  TestLinear.cpp
aimldl/: .gitignore  README.md
ajax/: pom.xml
android/: RnnoiseProcesser.cpp  RnnoiseProcesser.hpp
android/lipin/app/: CMakeLists.txt  build.gradle
android/lipin/app/src/main/: AndroidManifest.xml
android/lipin/app/src/main/cpp/: Lipin.cpp  Lipin.hpp
android/lipin/app/src/main/java/com/acgist/lipin/: Lipin.java  MainActivity.java
android/lipin/app/src/main/res/values/: strings.xml  themes.xml
android/lipin/app/src/main/res/values-night/: themes.xml
api/: .gitignore  LICENSE  README.MD  README.md  pom.xml
asc-customer/: pom.xml
asc-gateway/: pom.xml
asc-service/: pom.xml
bce/: .gitignore  README.md  pom.xml
c++/: .gitignore  CMakeLists.md
c++/manager/: CMakeLists.txt  Main.cpp  workers.list
c++/manager/header/: WorkerManager.hpp
c++/manager/source/: WorkerManager.cpp
cert/: CMakeLists.txt  main.cpp  win.rc
chrome/: README.md
client/: HELP.md  pom.xml
code/: TestOpenVINO.cpp
counter/: README.md
dd/: README.md  pom.xml
ding/: .gitignore  README.md
distributed/: README.md  pom.xml
doc-spliter/: README.md  pom.xml
duckdb/: README.md  pom.xml
esc-eureka-customer/: README
esc-eureka-dashboard/: pom.xml
esc-eureka-gateway/: README
flink/: .gitignore  (+1 more)
ggml/: .gitignore  CMakeLists.txt  README.md
ggml/src/header/: Matplot.hpp
ggml/src/source/: Matplot.cpp  TestLine.cpp
ggml/src/test1/: CMakeLists.txt  TestLine.cpp  TestMatplot.cpp
guiguzi/: .gitignore  CMakeLists.txt  README.md
guiguzi/audio/: CMakeLists.txt  README.md
guiguzi/audio/rnnoise/: Main.cpp  Opus.cpp
guiguzi/audio/rnnoise/guiguzi/: Guiguzi.cpp  Guiguzi.hpp
guiguzi/audio/rnnoise/opus/: Guiguzi.cpp  Guiguzi.hpp
guiguzi/audio/rnnoise/rnnoise/: CMakeLists.txt
guiguzi/audio/rnnoise/rnnoise/src/x86/: x86cpu.h
guiguzi/audio/zipenhancer/: Main.cpp
guiguzi/boot/: CMakeLists.txt
guiguzi/boot/src/: Logger.cpp
guiguzi/cv/: CMakeLists.txt  README.md
guiguzi/cv/src/aliang/: Aliang.cpp  Aliang.hpp  Detection.cpp  Main.cpp  OnnxRuntime.cpp  Recognition.cpp
guiguzi/cv/src/face-detection/: FDLibTorch.cpp  FDOnnx.cpp  FDOpenCV.cpp  Main.cpp
guiguzi/cv/src/face-recognition/: FRFaceFeature.cpp  FROnnx.cpp  FROpenCV.cpp  Main.cpp
guiguzi/cv/src/helmet/: Main.cpp
guiguzi/cv/src/opencv/: Main.cpp  Range.cpp
guiguzi/cv/src/safebelt/: Main.cpp
guiguzi/cv/src/track/: CMakeLists.txt  README.md
guiguzi/cv/src/track/bytetracker/: CMakeLists.txt
guiguzi/cv/src/track/onnx/: main.cpp
guiguzi/cv/src/track/opencv/: main.cpp
guiguzi/cv/src/video-capture/: Main.cpp
guiguzi/include/guiguzi/: Logger.hpp
guiguzi/include/guiguzi/cv/: FaceDetection.hpp  FaceRecognition.hpp
guiguzi/script/: yolov5-download.py  yolov5-eval.py
guiguzi/yolo/: README.md  pom.xml
guiguzi/yolo/src/main/java/com/guiguzi/yolo/: Label.java  YoloApplication.java
guiguzi/yolo/src/main/resources/: application.properties
guiguzi/yolo/src/test/java/com/guiguzi/yolo/: Csv2YoloTest.java  MergeYoloTest.java  Voc2YoloTest.java  YoloApplicationTests.java
just-share/: .gitignore  CMakeLists.txt  README.md
just-share/client/: CMakeLists.txt
just-share/client/android/: README.md
just-share/client/harmonyos/: README.md
just-share/client/linux/: CMakeLists.txt  README.md
just-share/client/linux/src/: main.cpp
just-share/client/mac/: README.md
just-share/client/openharmony/: README.md
just-share/client/test/: CMakeLists.txt  TestUdp.cpp
just-share/client/windows/: CMakeLists.txt  README.md
just-share/client/windows/src/: main.cpp  win.rc
just-share/core/: CMakeLists.txt
just-share/core/include/jshare/: cli.hpp  gui.hpp  jshare.hpp  udp.hpp
just-share/core/src/: cli.cpp  jshare.cpp  tcp.cpp  udp.cpp
just-share/include/jshare/: tcp.hpp  udp.hpp
just-share/src/: main.cpp  tcp.cpp  udp.cpp  win.rc
just-share/test/: CMakeLists.txt  TestTcp.cpp  TestUdp.cpp
libtorch/: .gitignore  CMakeLists.txt  README.md
libtorch/src/header/: Datasets.hpp  Files.hpp  Layers.hpp
libtorch/src/libtorch/: CMakeLists.txt  TestLoss.cpp  TestModel.cpp  TestPermute.cpp  TestSlowFast.cpp  TestTensor.cpp
libtorch/src/nlp/: TestEmbedding.cpp  TestPoetry.cpp
libtorch/src/opencv/: CMakeLists.txt  TestAudio.cpp  TestBackProject.cpp  TestCVT.cpp  TestColor.cpp  TestConv2d.cpp  TestDiff.cpp  TestDraw.cpp  TestEdge.cpp  TestEye.cpp  TestFace.cpp  TestFilter.cpp  TestHIST.cpp  TestHoughLines.cpp  TestImageInpaint.cpp  TestImagePool.cpp  TestImageSplit.cpp  TestMask.cpp  TestOPT.cpp  TestPoints.cpp  TestResize.cpp  TestStaff.cpp  TestTrack.cpp  TestWarp.cpp  TestXT.cpp
libtorch/src/source/: Datasets.cpp  Files.cpp  Layers.cpp  Random.cpp  TestCV.cpp  TestClassify.cpp  TestConv2d.cpp  TestDataset.cpp  TestGPU.cpp  TestGenderHandler.cpp  TestHouse.cpp  TestLayer.cpp  TestLibTorchLine.cpp  TestLine.cpp  TestLinear.cpp  TestLoss.cpp  TestMLP.cpp  TestMatplot.cpp  TestMemory.cpp  TestMultiLine.cpp  TestMultiLineX.cpp  TestQuantitative.cpp  TestReg.cpp  TestTensor.cpp  Vector.cpp
ncnn/: .gitignore  CMakeLists.txt  README.md
ncnn/src/: MainYolo11.cpp
pytorch/study-0/: CMakeLists.txt
pytorch/study-0/src/: Main.cpp
xunfei/: .gitignore  CMakeLists.txt
xunfei/cnenesr/: main.cpp  speech_recognizer.cpp  winrec.c
xunfei/cnenesr/include/: aikit_biz_api_c.h  aikit_biz_builder.h  aikit_err.h  aikit_spark_api.h  aikit_type.h  speech_recognizer.h
xunfei/xtts/: main.cpp
xunfei/xtts/include/: aikit_biz_config.h  aikit_common.h  aikit_err.h
(+2156 files in other folders)
